# rocket-api

./: .env-example  Cargo.toml  README.md
migrations/2021-10-09-005115_create_posts/: up.sql
src/: main.rs  schema.rs
