[package]
name = "rocket-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.4.8", features = ["postgres"]}
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
dotenv = "0.15.0"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"
log = "0.4.14"
env_logger = "0.9.0"
